// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Header component does not include admin entry when user has no admin portal entitlement 1`] = `
<div>
  <header
    class="Header"
  >
    <div
      class="Logo"
      data-testid="sh-header-logo"
    >
      <img
        alt="Logo"
        src="logo.png"
      />
    </div>
    <div
      class="Menu"
    >
      <div
        class="Additional"
      >
        <div
          data-testid="downloads-status-mock"
        >
          Downloads Status component
        </div>
      </div>
    </div>
    <div
      data-testid="login-button-mock"
    >
      Login Button
    </div>
    <button
      aria-label="Menu"
      class="Hamburger"
      data-testid="sh-header-hamburger"
    >
      <svg
        data-testid="svg-icon-mock"
      >
        mock-svg
      </svg>
    </button>
  </header>
  <div
    data-testid="mobile-menu-mock"
  >
    <div
      data-testid="mobile-menu-entry"
    >
      nav_menu.availability
      :
      /
    </div>
    <div
      data-testid="mobile-menu-entry"
    >
      nav_menu.legal
      :
      /legal
    </div>
    <div
      data-testid="mobile-menu-entry"
    >
      nav_menu.adminold
      :
      /admin
    </div>
  </div>
</div>
`;

exports[`Header component passes admin entry to mobile menu when user has admin portal entitlement 1`] = `
<div>
  <header
    class="Header"
  >
    <div
      class="Logo"
      data-testid="sh-header-logo"
    >
      <img
        alt="Logo"
        src="logo.png"
      />
    </div>
    <div
      class="Menu"
    >
      <div
        class="Additional"
      >
        <div
          data-testid="downloads-status-mock"
        >
          Downloads Status component
        </div>
      </div>
    </div>
    <div
      data-testid="login-button-mock"
    >
      Login Button
    </div>
    <button
      aria-label="Menu"
      class="Hamburger"
      data-testid="sh-header-hamburger"
    >
      <svg
        data-testid="svg-icon-mock"
      >
        mock-svg
      </svg>
    </button>
  </header>
  <div
    data-testid="mobile-menu-mock"
  >
    <div
      data-testid="mobile-menu-entry"
    >
      nav_menu.availability
      :
      /
    </div>
    <div
      data-testid="mobile-menu-entry"
    >
      nav_menu.admin
      :
      /adminportal
    </div>
    <div
      data-testid="mobile-menu-entry"
    >
      nav_menu.legal
      :
      /legal
    </div>
    <div
      data-testid="mobile-menu-entry"
    >
      nav_menu.adminold
      :
      /admin
    </div>
  </div>
</div>
`;

exports[`Header component renders component correctly on desktop 1`] = `
<div>
  <header
    class="Header"
  >
    <div
      class="Logo"
      data-testid="sh-header-logo"
    >
      <img
        alt="Logo"
        src="logo.png"
      />
    </div>
    <div
      class="Menu"
    >
      <nav
        class="Nav"
        data-testid="sh-header-nav"
      >
        <a
          aria-current="page"
          class="Active"
          data-discover="true"
          data-testid="sh-header-nav-link"
          href="/"
        >
          <span
            class="LinkText"
          >
            Availability
          </span>
        </a>
        <a
          class=""
          data-discover="true"
          data-testid="sh-header-nav-link"
          href="/legal"
        >
          <span
            class="LinkText"
          >
            Legal
          </span>
        </a>
        <a
          class=""
          data-discover="true"
          data-testid="sh-header-nav-link"
          href="/admin"
        >
          <span
            class="LinkText"
          >
            Admin
          </span>
        </a>
        <a
          class=""
          data-discover="true"
          data-testid="sh-header-nav-link"
          href="/test-module-route"
        >
          <span
            class="LinkText"
          >
            test-module-name
          </span>
        </a>
      </nav>
      <div
        class="Additional"
      >
        <div
          data-testid="downloads-status-mock"
        >
          Downloads Status component
        </div>
        <div
          data-testid="account-widget-mock"
        >
          Account Widget
        </div>
      </div>
    </div>
  </header>
</div>
`;

exports[`Header component renders component correctly on mobile and tablets for unauthorized users 1`] = `
<div>
  <header
    class="Header"
  >
    <div
      class="Logo"
      data-testid="sh-header-logo"
    >
      <img
        alt="Logo"
        src="logo.png"
      />
    </div>
    <div
      class="Menu"
    >
      <div
        class="Additional"
      >
        <div
          data-testid="downloads-status-mock"
        >
          Downloads Status component
        </div>
      </div>
    </div>
    <div
      data-testid="login-button-mock"
    >
      Login Button
    </div>
    <button
      aria-label="Menu"
      class="Hamburger"
      data-testid="sh-header-hamburger"
    >
      <svg
        data-testid="svg-icon-mock"
      >
        mock-svg
      </svg>
    </button>
  </header>
</div>
`;
